# space-invaders

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.h  game.h  shaders.h  sprite.h
src/: main.cpp
